# dais

./: .dockerignore  .gitignore  AGENTS.md  API_DOCUMENTATION.md  ARCHITECTURE_v1.1.md  BACKUP_RESTORE.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DEPLOYMENT.md  DEVELOPMENT.md  DNS_SETUP.md  Dockerfile  Dockerfile.cli  ENVIRONMENTS.md  FEDERATION_GUIDE.md  INSTALL.md  MIGRATION_GUIDE_v1.0_to_v1.1.md  Makefile  OPERATIONAL_RUNBOOK.md  PHASE_4_5_SUMMARY.md  PHASE_6_SUMMARY.md  PHASE_7_SUMMARY.md  PROGRESS_v1.1.md  README.md  RELEASE_CHECKLIST.md  ROADMAP.md  TESTING.md  TUI_SHORTCUTS.md  USER_GUIDE.md  V1.1_COMPLETION_SUMMARY.md  V1.1_STATUS.md  VISION.md  docker-compose.yml  docs_structure.txt  package-lock.json  package.json
.archive/: PHASE1_COMPLETE.md  PHASE1_DEPLOYMENT.md  README.md
apps/dais-desk/: Cargo.toml  build.rs
apps/dais-desk/automation/: DaisDesk.applescript  DaisDesk.ps1  README.md
apps/dais-desk/src/: lib.rs  main.rs
apps/dais-desk/tests/: gui_interaction.rs  live_compose_send.rs  live_smoke.rs  visual_smoke.rs
apps/dais-desk/ui/: app.slint
apps/owner-tauri/src-tauri/: Cargo.toml  tauri.conf.json
apps/owner-tauri/src-tauri/capabilities/: default.json
apps/owner-tauri/src-tauri/icons/: icon.icns
apps/owner-tauri/src-tauri/src/: main.rs
cli/: .gitignore  README.md  activate  pyproject.toml  test_tui.py
cli/dais_cli/: __init__.py  cli.py  config.py  delivery.py  e2ee.py  media.py  queue_delivery.py
cli/dais_cli/commands/: actor.py  auth.py  block.py  config_cmd.py  db.py  deploy.py  dm.py  doctor.py  follow.py  followers.py  interact.py  media.py  moderation.py  notifications.py  post.py  search.py  send_activity.py  setup.py  stats.py  test.py  timeline.py
cli/dais_cli/protocols/: __init__.py  atproto.py  manager.py
cli/dais_cli/tui/: __init__.py  app.py  themes.py
cli/dais_cli/tui/screens/: analytics.py  blocks.py  bluesky_chat.py  composer.py  dashboard.py  direct_messages.py  followers.py  moderation.py  notifications.py  theme_selector.py  thread.py
cli/dais_cli/tui/widgets/: error_dialog.py  follower_list.py  input_modal.py  post_list.py  progress_modal.py  stats.py
cli/migrations/: 001_initial_schema.sql  002_interactions.sql  003_moderation.sql  004_blocking.sql  005_following.sql  006_auth_tokens.sql  006_protocol_support.sql  007_direct_messages.sql  008_bluesky_chat.sql  009_private_mode.sql  010_timeline_posts.sql  011_friends_view.sql  012_e2ee_lifecycle.sql  013_rich_activitypub_objects.sql  014_generic_activity_deliveries.sql  015_closed_network_allowlist.sql  016_rich_activitypub_v2.sql  017_personal_appview_indexes.sql  018_public_sources.sql  019_activitypub_polls.sql  020_atproto_reply_refs.sql  021_audience_lists.sql  022_reply_moderation_policy.sql  023_ai_reply_moderation.sql  024_private_watch_sources.sql  025_owner_default_protocol.sql  026_e2ee_devices.sql  027_saved_posts.sql  028_reply_visibility.sql  029_mls_state.sql  030_mutes.sql  031_atproto_sync_commits.sql  032_private_groups.sql  033_e2ee_v2_only.sql  034_atproto_firehose_index.sql  035_atproto_pds_cache.sql
cli/test_keys/: private.pem
cli/tests/: __init__.py  conftest.py  test_config.py  test_delivery.py  test_post.py  test_signatures.py
cli/tests/fixtures/: public.pem
client/: Cargo.toml
client-core/: Cargo.toml
client-core/src/: e2ee.rs  lib.rs
client/dais/: Cargo.toml
client/dais-client/: Cargo.toml
client/dais-client/src/: actions.rs  api.rs  config.rs  d1.rs  e2ee.rs  error.rs  federation.rs  lib.rs  model.rs  platform.rs  signer.rs  store.rs
client/dais-tui/: Cargo.toml
client/dais-tui/src/: app.rs  lib.rs  ui.rs
client/dais/src/: main.rs  output.rs
client/dais/tests/: tui_pty.rs
client/src/: atproto.rs  cli.rs  config.rs  d1.rs  delivery.rs  doctor.rs  e2ee.rs  integrations.rs  main.rs  output.rs  posting.rs  routing.rs  sources.rs  tui.rs
conformance/: Cargo.toml
conformance/src/: lib.rs
conformance/tests/: live_protocol.rs
core/: Cargo.toml
core/src/: e2ee_mls.rs  e2ee_wire.rs  error.rs  lib.rs  migrations.rs  utils.rs  webfinger.rs
core/src/activitypub/: actor.rs  delivery.rs  friends.rs  inbox.rs  mod.rs  outbox.rs  security.rs  signatures.rs  timeline.rs  types.rs
core/src/atproto/: appview.rs  car.rs  firehose.rs  mod.rs  mst.rs  record_proof.rs  records.rs  repo.rs  sync.rs
core/src/protocol/: mod.rs
core/src/sql/: mod.rs  query.rs  schema.rs
core/src/traits/: database.rs  http.rs  mod.rs  queue.rs  storage.rs
core/tests/: private_mode.rs
dais-shared/: Cargo.toml
dais-shared/src/: e2ee.rs  lib.rs  signatures.rs  types.rs
docs/: ARCHITECTURE.md  DEPLOYMENT.md  POSITIONING.md  ROADMAP.md
instances/: skpt-cl.toml
scripts/: activitypub-conformance.mjs  apply-release-d1-migrations.sh  audit-e2ee-mls-security.sh  audit-implementation-honesty.sh  audit-skpt-independence.sh  backup.sh  bluesky-conformance.mjs  check-rate-limits.sh  deploy.sh  dev-start.sh  dev-stop.sh  disaster-recovery-drill.sh  federation-lab.mjs  federation-matrix.mjs  import-preview.rb  managed-health-check.sh  mastodon-api-conformance.mjs  mastodon-client-smoke.mjs  owner-tauri-smoke.mjs  package-dais-desk-macos.sh  provision-managed-instance.sh  publish-release-evidence.sh  release-desk-v2.sh  release-server.sh  review-dais-desk-visual-ux.sh  seed-container-db.sh  seed-local-db.sh  setup-dev.sh  smoke-cross-instance-e2ee.sh  smoke-cross-instance-mls.sh  smoke-local-mls.sh  smoke-managed-instance.sh  smoke-mls-state-migration.sh  test-containers.sh  (+11 more)
workers/inbox/: .gitignore  Cargo.toml  README.md  wrangler.toml  wrangler.toml.template
workers/inbox/src/: lib.rs
workers/pds/: Cargo.toml  README.md  wrangler.toml  wrangler.toml.template
workers/pds/src/: auth.rs  did.rs  lib.rs  relay_subscription.rs  xrpc.rs
workers/shared/: Cargo.toml
workers/shared/src/: lib.rs
workers/shared/src/activitypub/: activity.rs  object.rs
workers/shared/src/crypto/: mod.rs
workers/shared/src/db/: mod.rs
workers/webfinger/: Cargo.toml  README.md  wrangler.toml  wrangler.toml.template
workers/webfinger/src/: lib.rs
(+111 files in other folders)
