[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dais-cli"
version = "0.1.0"
description = "CLI tools for managing dais.social ActivityPub server"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "Marc", email = "marc@dais.social"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "click>=8.1.0",
    "httpx>=0.27.0",
    "rich>=13.7.0",
    "cryptography>=42.0.0",
    "boto3>=1.34.0",
    "python-dotenv>=1.0.0",
    "toml>=0.10.0",
    "atproto>=0.0.54",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "black>=24.0.0",
    "ruff>=0.3.0",
]

[project.scripts]
dais = "dais_cli.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["dais_cli*"]

[tool.black]
line-length = 100
target-version = ['py310']

[tool.ruff]
line-length = 100
target-version = "py310"
