[package]
name = "dais-client-core"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Shared owner-client models and workflow state for dais CLI, TUI, Dais Desk, and future mobile clients"

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
serde_json = "1"
