[package]
name = "dais-conformance"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Rust test harness for dais live protocol conformance gates"

[dev-dependencies]

[dependencies]
base64 = "0.22"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
rand = "0.8"
reqwest = { version = "0.13.4", features = ["blocking", "form", "json", "multipart"] }
rsa = "0.9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = { version = "0.10", features = ["oid"] }
tungstenite = { version = "0.29", features = ["rustls-tls-webpki-roots", "url"] }
urlencoding = "2"
