[package]
name = "dais-core"
version = "1.1.0"
edition = "2021"
authors = ["Marc T Jones <marc@dais.social>"]
description = "Platform-agnostic core library for dais single-user ActivityPub server"
license = "MIT"
repository = "https://github.com/marctjones/dais"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# Async runtime
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# ActivityPub/AT Protocol
# (Will add specific dependencies as we migrate logic)
chrono = { version = "0.4", features = ["serde"] }
url = "2.5"
uuid = { version = "1.0", features = ["v4", "serde"] }

# WASM bindings
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
serde-wasm-bindgen = "0.6"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Crypto (for ActivityPub signatures)
rsa = { version = "0.9", features = ["getrandom", "pem", "sha2"] }
sha2 = "0.10"
base64 = "0.21"

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }
tokio-test = "0.4"

[features]
default = []

# Platform-specific features (for conditional compilation)
cloudflare = []
vercel = []
netlify = []
