[package]
name = "dais-core"
version = "1.3.0"
edition = "2021"
authors = ["Marc T Jones <marc@dais.social>"]
description = "Platform-agnostic core library for dais single-user ActivityPub server"
license = "MIT"
repository = "https://github.com/marctjones/dais"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# Async runtime
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# ActivityPub/AT Protocol
# (Will add specific dependencies as we migrate logic)
chrono = { version = "0.4", features = ["serde"] }
url = "2.5"
uuid = { version = "1.0", features = ["v4", "serde", "js"] }

# WASM bindings
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
serde-wasm-bindgen = "0.6"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Crypto (for ActivityPub signatures)
rsa = { version = "0.9", features = ["getrandom", "pem", "sha2"] }
sha2 = "0.10"
base64 = "0.21"
openmls = { version = "0.8.1", optional = true, features = ["js", "openmls_rust_crypto"] }
openmls_basic_credential = { version = "0.5.0", optional = true }
openmls_rust_crypto = { version = "0.5.1", optional = true }

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }
tokio-test = "0.4"

[features]
default = []
mls = [
    "dep:openmls",
    "dep:openmls_basic_credential",
    "dep:openmls_rust_crypto",
]

# Platform-specific features (for conditional compilation).
# Cloudflare is the only supported deployment target; the provider-trait
# abstraction is retained for testability, not multi-platform shipping.
cloudflare = []

# wasm32 (Cloudflare Workers) needs a JS randomness backend for getrandom 0.2,
# pulled transitively by rsa. uuid's getrandom (0.4) is handled by uuid's "js"
# feature above. Without these, wasm builds fail with "the wasm*-unknown-unknown
# targets are not supported by default".
[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }
