[package]
name = "dais-desk"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
base64 = "0.22"
dais-client-core = { path = "../../client-core" }
dais-core = { path = "../../core", features = ["mls"] }
rand = "0.8"
rsa = "0.9"
slint = { version = "1.16.1", default-features = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread"] }

[build-dependencies]
slint-build = "1.16.1"

[dev-dependencies]
i-slint-backend-testing = "1.16.1"
image = { version = "0.25", default-features = false, features = ["png"] }
tempfile = "3"

[[test]]
name = "visual_smoke"
path = "tests/visual_smoke.rs"
harness = false

[patch.crates-io]
hpke-rs-libcrux = { path = "../../third_party/hpke-rs-libcrux-0.6.1" }
