[package]
name = "dais-client"
description = "dais client SDK — config, local SQLite store, Cloudflare D1 HTTP API, signing + E2EE. The one brain behind the CLI and the TUI."
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
dais-shared.workspace = true
# Native binding over the platform-agnostic server core: the client reuses core's
# audited delivery / signing / actor-fetch by implementing its HttpProvider +
# DatabaseProvider traits natively (reqwest + the D1 HTTP API). Same code path the
# Workers use — one audited federation implementation.
dais-core = { path = "../../core" }
async-trait = "0.1"
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
thiserror.workspace = true
reqwest.workspace = true
rusqlite.workspace = true
toml.workspace = true
dirs.workspace = true
uuid = { version = "1", features = ["v4", "v5"] }

[dev-dependencies]
tokio = { workspace = true }
rand_core = { version = "0.6", features = ["getrandom"] }
