[package]
name = "inbox"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = { version = "0.7.2", features = ["d1"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
console_error_panic_hook = "0.1"
base64 = "0.22"
sha2 = "0.10"

[dependencies.shared]
path = "../shared"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
