[package]
name = "shared"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["lib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
worker = "0.7.2"
rsa = { version = "0.9", features = ["getrandom", "pem", "sha2"] }
getrandom = { version = "0.2", features = ["js"] }
sha2 = "0.10"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
