[package]
name = "webfinger"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = "0.7.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
url = "2.5"
console_error_panic_hook = "0.1"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
